base/012-rule-autoextension/012-rule-autoextension-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: rule-autoextension
  name: rule-autoextension
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: rule-autoextension
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: rule-autoextension
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-rule-autoextension:development"
          name: rule-autoextension
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
