base/012-rule-autoextension/012-rule-autoextension-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: rule-autoextension
  name: rule-autoextension
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: rule-autoextension
---
